<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editText_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_password_confirmation"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_google"
        />




</LinearLayout>